# FlagGems

./: .clang-format  .coveragerc  .dockerignore  .gitattributes  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  GOVERNANCE.md  GOVERNANCE_cn.md  MAINTAINERS.md  README.md  README_cn.md  SECURITY.md  benchmark_v22_results.json  benchmark_v22_results.yaml  benchmark_v500_results.yaml  conftest.py  pyproject.toml  pytest.ini  setup.py  setup.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml
benchmark/: attri_util.py  base.py  benchmark_for_models.py  conftest.py  consts.py  core_shapes.yaml  performance_utils.py  summary_for_plot.py  test_Concat.py  test_abs.py  test_absolute.py  test_acos.py  test_acosh.py  test_act_quant.py  test_adaptive_avg_pool2d.py  test_adaptive_max_pool3d_backward.py  test_add.py  test_add_rms_norm.py  test_addcdiv.py  test_addcdiv_.py  test_addcmul.py  test_addcmul_.py  test_addmm.py  test_addmm_.py  test_addmv.py  test_addr.py  test_affine_grid_generator.py  test_alias_copy.py  test_all.py  test_allclose.py  test_alpha_dropout.py  test_amax.py  test_amin.py  test_aminmax.py  test_amp_foreach_non_finite_check_and_unscale_.py  test_angle.py  test_any.py  test_apply_repetition_penalties.py  test_apply_rotary_pos_emb.py  test_arange.py  (+504 more)
conf/: operators.yaml
container/: flaggems-iluvatar-4.4.0
cpp/: CMakeLists.txt  pyproject.toml
cpp/csrc/: CMakeLists.txt  aten_patch.cpp  aten_patch.h  cstub.cpp
examples/: be_pt2_compliant.py  deepseek_with_vllm_test.py  integration_gems_with_vllm.py  model_bert_test.py  model_llama_test.py  model_llava_test.py  pretune.py  use_cpp_runtime.py
modules_tests/: module_test_util.py  test_gems_activation.py  test_gems_attn.py  test_gems_normalization.py  test_gems_rotary_embedding.py
tests/: accuracy_utils.py  conftest.py  ks_tests.py  test_Concat.py  test_abs.py  test_absolute.py  test_acos.py  test_acosh.py  (+540 more)
(+2364 files in other folders)
